--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,12 @@
     margin: 5px;
     border-radius: 10px;
 }
+.b {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    border: solid 1px #7d7c7c;
+    margin: 5px;
+    border-radius: 10px;
+}
