--- a/test.css
+++ b/test.css
@@ -1,77 +1,68 @@
-
-.container .card .icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #2c73df;
-}
-.container .card .icon .fa {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 80px;
-  color: #fff;
-}
-.container .card .slide {
-  width: 300px;
-  height: 200px;
-  transition: 0.5s;
-}
-
-.container .card .slide.slide1 {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  transition: .7s;
-  transform: translateY(100px);
-}
-
-.container .card:hover .slide.slide1{
-  transform: translateY(0px);
-}
-.container .card .slide.slide2 {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
+*{
   box-sizing: border-box;
-  transition: .8s;
-  transform: translateY(-100px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.4);
 }
-.container .card:hover .slide.slide2{
-  transform: translateY(0);
+body{
+  margin: 0px;
+  padding: 0px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #130f40;
+  font-family: 'Lato' !important;
 }
-
-.container .card .slide.slide2::after{
-  content: "";
+.luyen-search-box{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+}
+.luyen-input-search{
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all .5s ease-in-out;
+  background-color: #22a6b3;
+  padding-right: 40px;
+  color:#fff;
+}
+.luyen-input-search::placeholder{
+  color:rgba(255,255,255,.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.luyen-btn-search{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
   position: absolute;
-  width: 30px;
-  height: 4px;
-  bottom: 15px;
-  left: 50%;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #2c73df;
+  right: 0px;
+  color:#ffffff ;
+  background-color:transparent;
+  pointer-events: painted;  
 }
-
-.container .card .slide.slide2 .content p {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  color: #414141;
-
+.luyen-btn-search:hover ~ .luyen-input-search{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 }
-.container .card .slide.slide2 .content h3 {
-  margin: 0 0 10px 0;
-  padding: 0;
-  font-size: 24px;
-  text-align: center;
-  color: #414141;
-} 
+.luyen-input-search:hover{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
