--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,3 +46,8 @@
         <div style="height: 10vh; background-color: #fff; border-radius: 10px;">footer</div>
     </div>
 </div>
+<!-- <div class="b">
+    <div style="height: 10vh; background-color: #fff; border-radius: 10px;">header</div>
+    <div style="height: 80vh;" [innerHTML]="test"></div>
+    <div style="height: 10vh; background-color: #fff; border-radius: 10px;">footer</div>
+</div> -->
